--- a/.env.development
+++ b/.env.development
@@ -1,9 +1,9 @@
 NODE_ENV=development
-VUE_APP_API_URI=https://api.better-call.dev/v1
-VUE_APP_IPFS_NODE=https://cloudflare-ipfs.com/
-VUE_APP_SEARCH_SERVICE_URI=https://search.dipdup.net
-VUE_APP_TOKEN_METADATA_API=https://metadata.dipdup.net
-VUE_APP_METADATA_API_URI=https://metadata.dipdup.net
-VUE_APP_MAINNET_STATS_API_URI=https://stats.dipdup.net
-VUE_APP_GHOSTNET_STATS_API_URI=https://stats-ghostnet.dipdup.net
-VUE_APP_TESTNET_STATS_API_URI=https://stats-nairobinet.dipdup.net
+VITE_API_URI=https://api.better-call.dev/v1
+VITE_IPFS_NODE=https://cloudflare-ipfs.com/
+VITE_SEARCH_SERVICE_URI=https://search.dipdup.net
+VITE_TOKEN_METADATA_API=https://metadata.dipdup.net
+VITE_METADATA_API_URI=https://metadata.dipdup.net
+VITE_MAINNET_STATS_API_URI=https://stats.dipdup.net
+VITE_GHOSTNET_STATS_API_URI=https://stats-ghostnet.dipdup.net
+VITE_TESTNET_STATS_API_URI=https://stats-nairobinet.dipdup.net
