--- a/.env.sandbox
+++ b/.env.sandbox
@@ -1,3 +1,3 @@
 NODE_ENV=production
-VUE_APP_API_URI=http://127.0.0.1/v1
-VUE_APP_IPFS_NODE=https://ipfs.io
+VITE_API_URI=http://127.0.0.1/v1
+VITE_IPFS_NODE=https://ipfs.io
