--- a/package.json
+++ b/package.json
@@ -41,8 +41,6 @@
     "stream-browserify": "^3.0.0",
     "v-clipboard": "^3.0.0-next.1",
     "vue": "^2.6.10",
-    "vue-codemirror": "^4.0.6",
-    "vue-codemirror-lite": "^1.0.4",
     "vue-gtag": "^1.16.1",
     "vue-json-pretty": "^1.9.4",
     "vue-meta": "^2.4.0",
@@ -62,11 +60,10 @@
     "eslint": "^8.53.0",
     "eslint-plugin-vue": "^9.18.1",
     "sass": "~1.32.6",
+    "unplugin-vue-components": "^0.25.2",
     "vite": "^4.5.0",
     "vite-plugin-vue2": "^2.0.3",
-    "vue-cli-plugin-vuetify": "^2.0.5",
-    "vue-template-compiler": "^2.6.10",
-    "vuetify-loader": "^1.3.0"
+    "vue-template-compiler": "^2.6.10"
   },
   "overrides": {
     "node-ipc@>9.2.1 <10": "9.2.1",
